# mnb_libsvm

./: CMakeLists.txt  README.md  basic_types.cpp  basic_types.hpp  data.cpp  data.hpp  main.cpp  mnb_libsvm.kdev4  naive_bayes.cpp  naive_bayes.hpp  training.hpp
